# DashManager

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF_CUSTOMERDAISY_PORT.md  HANDOFF_SIGNUP_SESSION.md  HARVEST_NOTES.md  NEXT_SESSION.md  PARITY_GAPLIST.md  README.md  REFUND_AUTOMATION_SPEC.md  SIGNUP_CDP_SPIKE_PLAN.md  SIGNUP_RESULTS.md  VERIFICATION.md  pyproject.toml  pyrightconfig.json  start.bat  start.command
backend/: __main__.py  account_creator.py  config.py  daisy_batches.py  db.py  events.py  keep_open_manager.py  main.py  models.py  otp_fetch.py  otp_live.py  profiles_live.py  refund_run.py  relogin.py  report.py  runner.py
backend/browser/: camoufox_signup.py  cdp_login.py  cdp_signup.py  chat.py  chat_strategy.py  claim.py  delivery_prefs.py  driver.py  hidden_desktop.py  login_flow.py  orders.py  pacing.py  proxy_pool.py  raw_uc_signup.py  refund_detector.py  selectors.py  session.py  signup.py  uc_signup.py
backend/daisy/: bridge.py  daisy_worker.py  sharded.py
backend/llm/: openrouter.py  prompts.py
backend/routes/: customers.py  daisy.py  keep_open.py  proxies.py  reports.py  runs.py  settings.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: app-layout.tsx  chat-transcript.tsx  empty-state.tsx  logo.tsx  page-header.tsx  theme-provider.tsx  theme-selector.tsx  theme-toggle.tsx
frontend/src/components/customers/: add-customer-dialog.tsx  bucket-card.tsx  copy-cell.tsx  create-account-dialog.tsx  customer-pills.tsx  delete-customer-dialog.tsx  edit-customer-dialog.tsx  fetch-otp-dialog.tsx  headless-toggle.tsx  helpers.ts  import-daisy-dialog.tsx  login-customer-dialog.tsx  results-table.tsx  selection-bar.tsx  session-status-badge.tsx
frontend/src/components/daisy/: address-book.tsx  daisy-analytics.tsx  (+1 more)
frontend/src/lib/: api.ts  sse.ts  status-tone.ts  themes.ts  types.ts
frontend/src/pages/: BatchOtpPage.tsx  CreatePage.tsx  CustomersPage.tsx  DaisyPage.tsx  DatabasePage.tsx  HistoryPage.tsx  KeepOpenPage.tsx  LiveOtpPage.tsx  OtpPage.tsx  ProxiesPage.tsx  ReportsPage.tsx  RunPage.tsx  SettingsPage.tsx
frontend/src/store/: runStore.ts
scripts/: live_selftest.py
tasks/: lessons.md
tests/: conftest.py  test_account_creator.py  test_camoufox_signup.py  test_cdp_login.py  test_cdp_signup.py  test_chat_helpers.py  test_chat_strategies.py  test_claim.py  test_daisy_batches.py  test_daisy_bridge_paths.py  test_daisy_bridge_readline.py  test_daisy_bridge_surface.py  test_daisy_routes.py  test_daisy_worker_db.py  test_daisy_worker_handle.py  test_db.py  test_delivery_prefs.py  test_events.py  test_hidden_desktop.py  test_keep_open.py  test_login_flow.py  test_openrouter.py  test_order_parsing.py  test_order_state.py  test_otp_fetch.py  test_otp_live.py  test_pacing_cloudflare.py  test_profiles_live.py  test_proxy_check.py  test_proxy_pool.py  test_proxy_routes.py  test_refund_detector.py  test_refund_run.py  test_relogin.py  test_report.py  test_routes.py  test_runs_routes.py  test_session_autoheal.py  test_sharded.py  test_signup_helpers.py  (+2 more)
(+32 files in other folders)
