[project]
name = "dashmanager"
version = "0.1.0"
description = "Local web app that audits DoorDash refunds per customer and pursues missing refunds via support chat."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "playwright>=1.48",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]
# Account creation uses an undetected browser (SeleniumBase UC mode) because
# DoorDash's signup endpoint 403s normal automation as user_assessment_bot.
# Optional — only needed for the create-account flow; login/scrape/refunds and
# the test suite don't require it (uc_signup imports it lazily).
signup = [
    "seleniumbase>=4.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
